# mobx-bazel-build

./: .eslintrc.js  .gitignore  .prettierignore  BUILD.bazel  README.md  WORKSPACE  package.json  rollup.config.js  tsconfig.json  tsconfig.test.json
scripts/: build.js
src/: BUILD.bazel  mobx.ts.ts
src/types/: observablearray.ts
test/: BUILD.bazel  jest.config.js
test/base/: typescript-tests.ts
tools-bazel/: jest.bzl
webpack-test/webpack_3_cjs/: BUILD.bazel  package.json  webpack.config.js
webpack-test/webpack_4_cjs/: BUILD.bazel  index.js  package.json  webpack.config.js
webpack-test/webpack_4_esm/: BUILD.bazel  index.js
webpack-test/webpack_4_esm_es6/: BUILD.bazel  webpack.config.js
webpack-test/webpack_4_umd/: BUILD.bazel  webpack.config.js
website/: BUILD.bazel
