package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "dts",
    srcs = glob([
        "**/*.ts",
    ]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/node",
    ],
)

filegroup(
    name = "js_src",
    srcs = [":dts"],
    output_group = "es5_sources",
)
