#load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package_bin")
#
#npm_package_bin(
#    name = "build",
#    args = [],
#    data = glob([
#        "core/**",
#        "i18n/**",
#        "static/**",
#    ]) + [
#        "sidebars.json",
#        "siteConfig.js",
#    ],
#    output_dir = True,
#    tool = "@npm-website//docusaurus/bin:docusaurus-build",
#)

# genrule(
#     name = "build_docs",
#     srcs = glob([
#         "core/**",
#         "i18n/**",
#         "static/**",
#     ]) + [
#         "sidebars.json",
#         "siteConfig.js",
#     ],
#     outs = [
#         "mobx",
#         "i18n"
#     ],
#     cmd = "cd website && node_modules/.bin/docusaurus-build && cp -r build/mobx ../$(@D) && cp -r i18n ../$(@D)",
#     tools = [
#         "@nodejs//:node",
#     ],
# )
