load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "npm_package_bin")

npm_package_bin(
    name = "webpack",
    outs = ["bundle.js"],
    args = [
        "-d",
        "--config",
        "$(location webpack.config.js)",
        "--entry",
        "./$(location index.js)",
        "--output-path",
        "$(@D)",
        "--resolve-alias",
        "mobx=../../$(location //:mobx_untainted)",  # Relative to the entry point
    ],
    data = [
        "index.js",
        "webpack.config.js",
        "//:mobx_untainted",
    ],
    tool = "@npm_webpack_3//webpack/bin:webpack",
)

nodejs_binary(
    name = "run",
    data = [
        ":webpack",
    ],
    entry_point = ":webpack",
)

sh_test(
    name = "test",
    size = "small",
    srcs = [":run.sh"],
    data = ["run"],
)
