load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test", "npm_package_bin")

npm_package_bin(
    name = "webpack",
    outs = ["bundle.js"],
    args = [
        "--config",
        "$(location webpack.config.js)",
        "--entry",
        "./$(location index.js)",
        "--output-path",
        "$(@D)",
        "--resolve-alias",
        "mobx=../../$(location //:mobx_untainted)/mobx.es6.js",  # Relative to the entry point
    ],
    data = [
        "index.js",
        "webpack.config.js",
        "//:mobx_untainted",
        "@npm_webpack_4//webpack-cli",
    ],
    tool = "@npm_webpack_4//webpack/bin:webpack",
)

nodejs_test(
    name = "test",
    size = "small",
    data = [":webpack"],
    entry_point = ":webpack",
)
